# scicode-lint

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Claude.md  DOCUMENTATION_MAP.md  INSTALLATION.md  README.md  pyproject.toml  requirements-pinned.txt
benchmarks/: README.md  speed_benchmark.py
consolidated_results/: CONSOLIDATED_REPORT.md  PRECISION_PROGRESSION.md  README.md  generate_consolidated_report.py
dev_lib/: claude_cli.py
docs/: API_REFERENCE.md  MODEL_SELECTION.md  USAGE.md  VLLM_UTILITIES.md  VRAM_REQUIREMENTS.md
docs/dev/: ARCHITECTURE.md  IMPLEMENTATION.md  QUALITY_GATES.md
docs/performance/: CONCURRENCY_GUIDE.md
docs_dev_genai/: CONTINUOUS_IMPROVEMENT.md  DETECTION_ARCHITECTURE.md  META_IMPROVEMENT_LOOP.md  TOOLS.md
docs_use_human/: USAGE.md  VRAM_REQUIREMENTS.md
docs_use_human/performance/: BENCHMARKING.md
evals/: README.md  __init__.py  judge_models.py  report_generator.py  run_eval.py  variance.py
evals/integration/: generator.py  integration_eval.py  models.py  prompts.py  storage.py
pattern_verification/: README.md
pattern_verification/deterministic/: checks.py  doc_cache.py  fix.py  models.py  validate.py
pattern_verification/pattern-reviewer/: system_prompt.md
patterns/ai-inference/pt-007-inference-without-eval/: pattern.toml
patterns/ai-training/ml-007-test-set-preprocessing/: pattern.toml
patterns/ai-training/pt-001-missing-train-mode/: pattern.toml
patterns/scientific-reproducibility/rep-001-incomplete-random-seeds/: pattern.toml
patterns/scientific-reproducibility/rep-001-incomplete-random-seeds/test_positive/: train_test_split_no_seed.py
real_world_demo/: README.md  __init__.py  analysis_reporting.py  config.py  database.py  db_analysis.py  db_core.py  db_papers.py  db_prefilter.py  db_scans.py  db_stats.py  generate_report.py  report_critical.py  report_queries.py  run_analysis.py
real_world_demo/output_examples/papers_with_code/: FINDINGS_REPORT.md  VALID_FINDINGS_SAMPLE.md
real_world_demo/paper_sets/: meta_loop_set.md
real_world_demo/sources/papers_with_code/: PAPERS_WITH_CODE_DATA_SOURCE.md  clone_repos.py  filter_abstracts.py
scripts/: check_dependencies.py  regenerate_pinned_requirements.py  review_patterns.sh
src/scicode_lint/: __init__.py  cli.py  cli_commands.py  cli_parse.py  cli_server.py  config.py  config.toml  exceptions.py  linter.py
src/scicode_lint/llm/: CONSTRAINED_DECODING.md  __init__.py  client.py  exceptions.py  models.py
src/scicode_lint/output/: formatter.py
src/scicode_lint/patterns/: README.md
src/scicode_lint/patterns/ai-inference/pt-006-logit-threshold-without-sigmoid/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-007-inference-without-eval/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-011-unbatched-gpu-inference/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-013-missing-inference-mode/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-014-cuda-timing-without-sync/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-015-device-mismatch-load/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-017-jit-trace-control-flow/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-018-dynamic-shape-onnx-export/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-019-cudnn-benchmark-inference/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-021-missing-warmup-benchmark/: pattern.toml
src/scicode_lint/patterns/ai-inference/pt-022-compile-graph-mode-mismatch/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-001-scaler-leakage/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-002-target-leakage/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-003-target-encoding-leakage/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-004-imbalanced-accuracy-metric/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-005-cv-temporal-shuffle/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-006-temporal-shift-leakage/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-008-unstratified-split/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-009-overlap-leakage/: pattern.toml
src/scicode_lint/patterns/ai-training/ml-010-multi-test-leakage/: pattern.toml
src/scicode_lint/patterns/ai-training/pt-001-missing-train-mode/: pattern.toml
src/scicode_lint/patterns/ai-training/pt-003-inplace-leaf-variable/: pattern.toml
src/scicode_lint/patterns/ai-training/pt-004-missing-zero-grad/: pattern.toml
src/scicode_lint/patterns/ai-training/pt-005-detached-loss-backward/: pattern.toml
src/scicode_lint/patterns/ai-training/pt-008-optimizer-before-backward/: pattern.toml
src/scicode_lint/patterns/ai-training/pt-009-loss-tensor-accumulation/: pattern.toml
src/scicode_lint/patterns/ai-training/pt-010-dataloader-no-workers/: pattern.toml
src/scicode_lint/patterns/ai-training/pt-012-gradient-accumulation-without-scaling/: pattern.toml
src/scicode_lint/patterns/scientific-numerical/np-001-slice-view-mutation/: pattern.toml
src/scicode_lint/patterns/scientific-numerical/np-002-broadcasting-shape-mismatch/: pattern.toml
src/scicode_lint/patterns/scientific-numerical/num-001-float-equality-comparison/: pattern.toml
src/scicode_lint/patterns/scientific-numerical/num-002-catastrophic-cancellation/: pattern.toml
src/scicode_lint/repo_filter/: __init__.py  classify.py  scan.py
src/scicode_lint/tools/: new_pattern.py
src/scicode_lint/vllm/: README.md  __init__.py  container.py  metrics.py  start_vllm.sh
tests/: conftest.py  test_claude_cli.py  test_cli_exit_codes.py  test_doc_cache.py  test_exceptions.py  test_formatter_text.py  test_llm_client.py  test_real_world_demo_db.py  test_real_world_demo_filtering.py  test_real_world_demo_pipeline.py  test_real_world_demo_report.py  test_repo_filter.py  test_schema_bounds.py  test_vllm.py  test_vllm_container.py  test_vllm_metrics.py
(+98 files in other folders)
