[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scicode-lint"
version = "0.3.0"
description = "AI-powered linter for scientific ML code. Detects methodology bugs such as data leakage, incorrect cross-validation, numerical instability, and reproducibility issues that produce plausible but wrong results. 66 detection patterns across 5 categories. Runs via local or institutional vLLM server, no cloud APIs."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sergey Samsonau"}
]
maintainers = [
    {name = "Authentic Research Partners LLC", email = "info@arpconnect.com"}
]
keywords = ["linter", "scientific-computing", "machine-learning", "pytorch", "data-leakage", "methodology-bugs", "code-review", "research-code", "numerical-stability", "cross-validation", "static-analysis", "vllm", "qwen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "openai>=2.24.0",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://arpconnect.com"
Repository = "https://github.com/authentic-research-partners/scicode-lint"
Issues = "https://github.com/authentic-research-partners/scicode-lint/issues"
Documentation = "https://github.com/authentic-research-partners/scicode-lint#readme"
Paper = "https://arxiv.org/abs/2603.17893"

[project.scripts]
scicode-lint = "scicode_lint.cli:main"

[project.optional-dependencies]
eval = [
    "pyyaml>=6.0.3",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
dev = [
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "types-PyYAML>=6.0.12",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pip-audit>=2.10.0",
    "bandit>=1.9.4",
    "safety>=3.7.0",
    "aiolimiter>=1.2.1",
]
dashboard = [
    "streamlit>=1.55.0",
    "pandas>=2.3.3",
    "altair>=6.0.0",
    "nvidia-ml-py>=13.590.48",
]
real-world-demo = [
    "datasets>=4.7.0",  # HuggingFace datasets library for PWC archive
]
all = [
    "scicode-lint[dev,eval,dashboard,real-world-demo]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scicode_lint"]
exclude = [
    "src/scicode_lint/evals",       # gitignored runtime output, not a module
    "src/scicode_lint/**/.mypy_cache",
    "src/scicode_lint/**/__pycache__",
]

[tool.hatch.build.targets.sdist]
# Allow-list: only these paths go into the source distribution.
# `only-include` is restrictive (unlike `include`, which is additive).
only-include = [
    "src/scicode_lint",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "INSTALLATION.md",
    "CONTRIBUTING.md",
    "pyproject.toml",
]
exclude = [
    "src/scicode_lint/evals",
    "src/scicode_lint/**/.mypy_cache",
    "src/scicode_lint/**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Exclude pattern test files (they contain intentional bugs for evaluation)
norecursedirs = ["src/scicode_lint/patterns", "evals"]
# Auto-detect async test functions (no @pytest.mark.asyncio needed)
asyncio_mode = "auto"
# Custom markers
markers = [
    "vllm: tests that require a running vLLM server (deselected by default, run with: pytest -m vllm)",
]
# Skip vLLM tests by default (they require external server)
addopts = "-m 'not vllm'"

[tool.ruff]
line-length = 100
target-version = "py313"
# Exclude pattern test files (contain intentional bugs and minimal examples)
exclude = ["src/scicode_lint/patterns/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Prompts contain long strings that shouldn't be wrapped
"src/scicode_lint/detectors/prompts.py" = ["E501"]
"src/scicode_lint/repo_filter/classify.py" = ["E501"]
"evals/integration/integration_eval.py" = ["E501"]
"evals/integration/prompts.py" = ["E501"]
"evals/integration/generator.py" = ["E501"]
"pattern_verification/deterministic/validate.py" = ["E501"]
"pattern_verification/deterministic/doc_cache.py" = ["E501"]
"real_world_demo/sources/papers_with_code/filter_abstracts.py" = ["E501"]
"real_world_demo/analyze_errors.py" = ["E501"]
# Prometheus metrics sample lines have long Prometheus-format label sets
"tests/test_vllm_metrics.py" = ["E501"]
"evals/integration/generated/**" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Exclude pattern files, integration scenarios, and demo data directories
exclude = [
    "src/scicode_lint/patterns/",
    "evals/integration/scenarios/",
    "evals/integration/curated/",
    "evals/integration/combinatorial/",
    "evals/integration/generated/",
    "real_world_demo/collected_code/",
    "real_world_demo/cloned_repos/",
    "benchmarks/fixtures/",
]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "torch.*",
    "toml",
    "pandas",
    "datasets",
    "html2text",
]
ignore_missing_imports = true

[tool.bandit]
# Detection example files (positive/negative test cases) intentionally contain
# unsafe patterns — that is what scicode-lint detects. Not our production code.
exclude_dirs = ["src/scicode_lint/patterns"]
# B101 assert_used — legitimate for type narrowing and internal invariants
# B404 import subprocess — informational only; we control all subprocess calls
# B603 subprocess_without_shell_equals_true — we use list args, no shell injection
# B607 start_process_with_partial_path — nvidia-smi/podman/docker are standard system tools
skips = ["B101", "B404", "B603", "B607"]
